# OpenGL-group

./: README.md
gpu-perf/: CMakeLists.txt  README.md  build.sh
gpu-perf/assimp_5_2_2/: CMakeLists.txt
gpu-perf/assimp_5_2_2/code/: CMakeLists.txt
gpu-perf/assimp_5_2_2/code/Common/: ZipArchiveIOSystem.cpp
gpu-perf/glfw_3_3_7/: CMakeLists.txt
gpu-perf/glfw_3_3_7/src/: egl_context.c
gpu-perf/include/: GLSLProgram.h  Log.h  Mesh.h  Model.h  Node.h  ObjectFactory.h  TextRender.h  Texture.h  Window.h  globaldefine.h  perfeglcontext.h  perftimer.h  perfxwindow.h
gpu-perf/include/ftgl/: freetype-gl.h  vec.h  vertex-attribute.h  vertex-buffer.h
gpu-perf/include/glad/: glad.h
gpu-perf/media/: weight.txt
gpu-perf/media/objects/: football-obj.mtl
gpu-perf/media/shaders/cineshader/: render.fs.glsl  render.vs.glsl
gpu-perf/media/shaders/depth/: depth_cube.frag  depth_cube.vert  depth_glass.frag  depth_glass.vert
gpu-perf/media/shaders/fill/: fill.fs.glsl  fill.vs.glsl
gpu-perf/media/shaders/fire/: fire.fs.glsl  flsGDH.fs.glsl  render.fs.glsl  render.vs.glsl  tsXBzS.fs.glsl
gpu-perf/media/shaders/font/: text.frag  text.vert
gpu-perf/media/shaders/lights/: chicken_fs.glsl  chicken_vs.glsl
gpu-perf/media/shaders/material/: render.fs.glsl  render.vs.glsl
gpu-perf/media/shaders/points/: pointsprite.fs.glsl  pointsprite.vs.glsl
gpu-perf/media/shaders/shadowmap/: render.frag  render.vert  render45.vert  shadow.frag  shadow.vert
gpu-perf/media/shaders/skybox/: render.fs.glsl  render.vs.glsl  skybox.fs.glsl  skybox.vs.glsl
gpu-perf/media/shaders/texture/: texture.frag  texture.vert
gpu-perf/media/shaders/vertexrate/: fs.glsl  vertexrate.fs.glsl  vertexrate.geom.glsl  vertexrate.vs.glsl  vs.glsl
gpu-perf/media/shaders/waterwave/: waterwave.fs.glsl  waterwave.vs.glsl
gpu-perf/media/textures/: sprite1.image  yanse-diff.psd
gpu-perf/media/textures/envmaps/: 1.image  2.image  3.image
gpu-perf/src/: main.cpp
gpu-perf/src/depth/: depth.cpp
gpu-perf/src/fill/: fill.cpp
gpu-perf/src/fire/: fire.cpp
gpu-perf/src/ftgl/: distance-field.c  edtaa3func.c  ftgl-utils.c  texture-atlas.c  texture-font.c  utf8-utils.c  vector.c  vertex-attribute.c  vertex-buffer.c
gpu-perf/src/glpbcommon/: GLSLProgram.cpp  Log.cpp  Mesh.cpp  Model.cpp  Node.cpp  TextRender.cpp  Texture.cpp  Window.cpp  glad.c  perfeglcontext.cpp  perftimer.cpp  perfxwindow.cpp
gpu-perf/src/lights/: lights.cpp
gpu-perf/src/material/: material.cpp
gpu-perf/src/pixel/: pixel.cpp
gpu-perf/src/shader/: shader.cpp
gpu-perf/src/shadowmap/: shadowmap.cpp
gpu-perf/src/skybox/: skybox.cpp  vertex_roll.h
gpu-perf/src/sprite/: sprite.cpp
gpu-perf/src/textures/: textures.cpp
opengl-test/: Makefile  drm-test  drm-test.c  glad.c  modeset-plane-test  sourceme  tri0  tri0.c  triangles  triangles.c
